@@ -120,7 +120,7 @@ public class MethodInvocation implements IMethodInvocation {
 
   @Override
   public void setArguments(Object[] arguments) {
-    Checks.checkArgument(arguments.length != this.arguments.length, () -> "length of arguments array must not change from " + this.arguments.length + " to " + arguments.length);
+    Checks.checkArgument(arguments.length == this.arguments.length, () -> "length of arguments array must not change from " + this.arguments.length + " to " + arguments.length);
     this.arguments = arguments;
   }
 
